--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,14 @@ authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
 license = "MIT"
 description = "A work in progress interactive parser for JsonSchema types."
 repository = "https://github.com/ewoolsey/interactive-parse"
-keywords = ["JsonSchema", "parser", "interactive", "cli", "shell"]
+keywords = ["JsonSchema", "Schemars", "json", "serde", "parser", "interactive", "cli", "shell"]
 readme = "README.md"
 
 [lib]
 
 [dependencies]
-schemars = "0.8.8"
+schemars = "0.8"
 serde_json = "1"
-serde = { version = "1", default-features = false, features = ["derive"] }
-thiserror = "1.0.31"
-inquire = "0.5.2"
+serde = { version = "1", default-features = false }
+thiserror = "1"
+inquire = "0.5"
