--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ serde_json = "1"
 serde = { version = "1", default-features = false }
 thiserror = "1"
 inquire = "0.5"
+log = "0.4"
+
+[dev-dependencies]
+env_logger = "0.10"
