--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.3"
 edition = "2021"
 authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
 license = "MIT"
-description = "A work in progress interactive parser for JsonSchema types."
+description = "An interactive parser for JsonSchema types."
 repository = "https://github.com/ewoolsey/interactive-parse"
 keywords = ["JsonSchema", "Schemars", "json", "parser", "interactive"]
 readme = "README.md"
@@ -16,7 +16,8 @@ schemars = "0.8"
 serde_json = "1"
 serde = { version = "1", default-features = false }
 thiserror = "1"
-inquire = "0.5"
+inquire = "0.6"
+crossterm = "0.26"
 log = "0.4"
 
 [dev-dependencies]
