--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 [lib]
 
 [dependencies]
+lazy_static = "1"
 schemars = "0.8"
 serde_json = "1"
 serde = { version = "1", default-features = false }
